1. Fixed bug #69640 Unhandled EngineExceptions thrown from userland do not produce any output

2. Fixed Segfault introduced by latest changes